<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E-commerce</string>
    <string name="title_activity_login">login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Name">Name</string>
    <string name="CancelRegister">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="Email">Email</string>
    <string name="Cart">Cart</string>
    <string name="AddToCart">Add to Cart</string>
    <string name="AddToCart2">Add to Cart</string>
    <string name="Logout">Logout</string>
    <string name="Buy">Buy</string>
    <string name="Remove">Remove</string>
    <string name="ConfirmRemove">Confirm Remove</string>
    <string name="RemoveItem">Remove Item</string>
    <string name="AddItem">Add Item</string>
    <string name="ProductName">Product Name</string>
    <string name="Quantity">Quantity</string>
    <string name="Cancel">Cancel</string>
    <string name="ItemName">Item Name</string>
    <string name="Quantity_1">Quantity: 1</string>
    <string name="AuthenticationFailed">Authentication failed</string>
    <string name="AskUser">"Please enter username and password"</string>
    <string name="ErrorReg">Error during the registration. Try again</string>
    <string name="Error_Email">Email address is already in use</string>
    <string name="Error_Email_Justi">Email address already in use. Please try another one</string>
    <string name="Error_Pass">WEAK_PASSWORD</string>
    <string name="Error_Pass_Justi">Password has to have at least 6 caracters</string>
    <string name="Error_Invalid_Email">INVALID_EMAIL</string>
    <string name="Error_Invalid_Email_Justi">Invalid email address</string>
    <string name="Error_PassMatch">Password do not match</string>
    <string name="Error_EmailFormat">Invalid email address format</string>
    <string name="Error_Caracters">Password must have at least 6 caracters</string>
    <string name="Error_EmptyFields">All fields must be filled</string>
    <string name="RegistrationSuccess">Registration Successful</string>
    <string name="Ok">OK</string>
    <string name="ChoosePhoto">Please choose a photo</string>
    <string name="Quantity_Error">Quantity must be at least 1</string>
    <string name="InvalidQuantity">Quantity must be a number</string>
    <string name="EmptyFields_Error">Product name cannot be empty</string>
    <string name="PhotoOptions">Choose Photo Options</string>
    <string name="Options">Do you wish to take a photo ot choose from gallery?</string>
    <string name="TakePhoto">Take Photo</string>
    <string name="Error_CreatingImageFile">Error creating image</string>
    <string name="Error_LaunchingCamera">Error launching the camera</string>
    <string name="Gallery">Choose from Gallery</string>
    <string name="Quantity_">Quantity: </string>
    <string name="Address">Enter your Address or use Map</string>
    <string name="Flat_Suite_Floor">Flat/Suit/Floor</string>
    <string name="Back">Back</string>
    <string name="CheckOut">Check out</string>
    <string name="AddressMarker">Address Marker</string>
    <string name="NewAddress">New Address</string>
    <string name="PurchaseDone">Purchase Successfull</string>
    <string name="PurchaseMessage">You will receive a email with payment details</string>

</resources>